# medi-track

./: .gitignore  README.md
agent/: LLM.py  allergy.py  customTypes.py  healthIssue.py  main.py  medAI.py  ocr.py  pyproject.toml  requirements.txt  templates.py  vector.py
agent/chroma_db/: chroma.sqlite3
backend/: package-lock.json  package.json
backend/prisma/: schema.prisma
backend/src/: server.ts
backend/src/api/controllers/: chat.controller.ts  upload.controller.ts  user.controller.ts
backend/src/api/routes/: chat.route.ts  index.route.ts  upload.route.ts  user.route.ts
backend/src/api/services/: chat.service.ts  upload.service.ts  (+1 more)
backend/src/config/: env.config.ts
backend/src/lib/: cloudinary.ts  nodemailer.ts  prisma.db.ts  prisma.orm.ts  rate-limit.ts  token.ts
backend/src/mails/: passwords.mail..ts
backend/src/middleware/: auth.middleware.ts  rate-limit.middleware.ts
backend/src/types/: chat.type.ts  rate-limit.type.ts  upload.type.ts  user.type.ts
frontend/: app.json  package-lock.json  package.json
frontend/.expo/types/: router.d.ts
frontend/api/: ai-agent.api.ts  apiUrl.ts  auth.api.ts  chat.api.ts  upload.api.ts  user.api.ts
frontend/app/: index.tsx
frontend/app/(app)/: _layout.tsx  chat.tsx  dashboard.tsx  scan.tsx  settings.tsx
frontend/app/(auth)/: login.tsx  reset-password.tsx
frontend/app/(settings)/: change-password.tsx
frontend/hooks/: signUp.ts  useAuth.ts  useScan.ts  useSignUp.ts
frontend/types/: ai-agent.types.ts  user.types.ts
web/: package-lock.json  package.json
web/app/: layout.tsx  page.tsx
(+4 files in other folders)
